enable java 17 for testing