@@ -87,5 +87,13 @@ lazy val root = (project in file(".")).
       "org.apache.spark" %% "spark-sql" % "3.5.3" % Provided,
       "org.apache.spark" %% "spark-graphx" % "3.5.3" % Provided,
       "graphframes" % "graphframes" % "0.8.3-spark3.5-s_2.12" % Provided),
-    javaOptions ++= Seq("-Xms8g", "-Xmx8g", "-XX:+CMSClassUnloadingEnabled")
+    javaOptions ++= Seq(
+      "-Xms8g",
+      "-Xmx8g",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-exports=java.base/sun.misc=ALL-UNNAMED"
+    )
   )
